actually fix container overflow

--- a/src/components/BoardBackground/index.module.scss
+++ b/src/components/BoardBackground/index.module.scss
@@ -1,5 +1,18 @@
 .Container {
+	position: absolute;
 	height: 100%;
 	width: 100%;
-	max-width: 100%;
+	z-index: -1;
+	overflow: hidden;
+
+	.SolidBackground {
+		width: 100%;
+		height: 100%;
+	}
+
+	.BackgroundImage {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
