--- a/src/components/layout/workspace/Sidebar/index.module.scss
+++ b/src/components/layout/workspace/Sidebar/index.module.scss
@@ -1,6 +1,9 @@
 .Wrapper {
+	width: var(--sidebar-width);
 	min-width: var(--sidebar-width);
+	height: 100%;
 	display: flex;
+
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
